cambios en pagina principal

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         main {
         background-color: rgb(153, 240, 218);
         width: 100%;
-        height: 130px;
+        height: 140px;
         
         
         display: flex;
@@ -62,8 +62,12 @@
           justify-content: flex-end; /* Alinea los íconos a la derecha */
           margin-right: 60px;
         }
+        section {
+        background-color: rgb(211, 209, 89);
+        width: 100%;
+        height: 140px;
 
-        
+        }
         
 
     </style>
@@ -84,6 +88,17 @@
         </div>
       </nav>
     </main>
+    <section>
+      <h2>Introducción</h2>
+      <p>Bienvenido a nuestra página principal. Aquí encontrarás información sobre nuestros productos y servicios.</p>
+    </section>
+    <section>
+      <h2>Productos Destacados</h2>
+      <p>Descubre nuestros productos más populares y encuentra lo que necesitas.</p>
+    </section>
+    
+  
+  
   </body>
 </html>
 
