--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
       <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/logo2.png') }}">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-
+        <script src="compras.js"></script>
     <style>
         *:before,
         *:after{
@@ -16,22 +16,23 @@
           box-sizing: border-box;
         }
         body{
-        background-color: #080710;
+          background-color:  hsl(180, 43%, 99%);
+          margin: 0;
+          padding: 0;
         }
-        
         main {
-        background-color: rgb(153, 240, 218);
-        width: 100%;
-        height: 140px;
-        
-        
-        display: flex;
+          background-color: rgb(153, 240, 218);
+          width: 100%;
+          height: 140px;
+          display: flex;
+          position: fixed;
         }
         nav {
           display: flex;
           justify-content: space-between; /* Separa el logo, la lista y los íconos */
           align-items: center;
           width: 100%;
+          position: fixed;
         }
         ul {
           display: flex;
@@ -52,6 +53,14 @@
           overflow: 0.8;
           background-color: rgb(98, 157, 207);
         }
+        .slider {
+          width: 100%;
+          height: auto;
+        }
+        .slider img {
+          width: 100%;
+          height: auto;
+        }
         .fas {
           margin: 0px; /* Ajusta el margen para controlar la separación entre íconos */
           margin-right: 5px;
@@ -63,11 +72,40 @@
           margin-right: 60px;
         }
         section {
-        background-color: rgb(211, 209, 89);
-        width: 100%;
-        height: 140px;
-
+          width: 100%;
+          height: auto;
+          margin: 0;
+          text-align: center;
         }
+        p{
+          font-size: 20px;
+          color: #333;
+        }
+        .product-card {
+          padding: 1px;
+          text-align: center;
+          width: 95%;
+          height: 40%px;
+          background-color: hsl(180, 43%, 99%);
+          margin-left: 5px;
+          border: 1 px solid #333;
+          padding: 10px;
+        }
+        .product-card img {
+          width: 100%;
+          height: 80%;
+          object-fit:fill;
+        }
+        .price {
+          font-weight: bold;
+        }
+        .product-container {
+          grid-template-columns: repeat(5, 1fr);
+          display: grid;
+         margin: auto;
+         
+        }
+
         
 
     </style>
@@ -88,14 +126,101 @@
         </div>
       </nav>
     </main>
-    <section>
-      <h2>Introducción</h2>
-      <p>Bienvenido a nuestra página principal. Aquí encontrarás información sobre nuestros productos y servicios.</p>
-    </section>
-    <section>
-      <h2>Productos Destacados</h2>
-      <p>Descubre nuestros productos más populares y encuentra lo que necesitas.</p>
-    </section>
+      <section>
+      <div class="slider">
+        <img src="{{ url_for('static', filename='img/moda2.png') }}" >
+          </div>
+            <h2>Productos Destacados</h>
+      </section>
+      <section>
+        <!--PRODUCTOS-->
+        <div class="product-container">
+            <div class="product-card">
+              <img src="{{ url_for('static', filename='img/jean1.png') }}" alt="Jeans">
+              <h6>JEANS REGULAR YOUNG</h6>
+              <P class="price">$119.000</p>
+              <button class="add-to-cart">Agregar al carrito</button>
+              </div>
+              <div class="product-card">
+                <img src="{{ url_for('static', filename='img/jean2.png') }}" alt="Jeans">
+                <h6>JEANS REGULAR YOUNG</h6>
+                <P class="price">$119.000</p>
+                <button class="add-to-cart">Agregar al carrito</button>
+                </div>
+                <div class="product-card">
+              <img src="{{ url_for('static', filename='img/jean3.png') }}" alt="Jeans">
+              <h6>JEANS REGULAR YOUNG</h6>
+              <P class="price">$119.000</p>
+              <button class="add-to-cart">Agregar al carrito</button>
+              </div>
+              <div class="product-card">
+                <img src="{{ url_for('static', filename='img/jean4.png') }}" alt="Jeans">
+                <h6>JEANS REGULAR YOUNG</h6>
+                <P class="price">$119.000</p>
+                <button class="add-to-cart">Agregar al carrito</button>
+                </div>
+              <div class="product-card">
+                <img src="{{ url_for('static', filename='img/buzo1.png') }}" alt="Jeans">
+                <h6>JEANS REGULAR YOUNG</h6>
+                <P class="price">$119.000</p>
+                <button class="add-to-cart">Agregar al carrito</button>
+                </div>
+                <div class="product-card">
+                  <img src="{{ url_for('static', filename='img/buzo2.png') }}" alt="Jeans">
+                  <h6>JEANS REGULAR YOUNG</h6>
+                  <P class="price">$119.000</p>
+                  <button class="add-to-cart">Agregar al carrito</button>
+                  </div>
+                  <div class="product-card">
+                    <img src="{{ url_for('static', filename='img/buzo3.png') }}" alt="Jeans">
+                    <h6>JEANS REGULAR YOUNG</h6>
+                    <P class="price">$119.000</p>
+                    <button class="add-to-cart">Agregar al carrito</button>
+                    </div>
+                    <div class="product-card">
+                      <img src="{{ url_for('static', filename='img/buzo4.png') }}" alt="Jeans">
+                      <h6>JEANS REGULAR YOUNG</h6>
+                      <P class="price">$119.000</p>
+                      <button class="add-to-cart">Agregar al carrito</button>
+                      </div>
+            <div class="product-card">
+              <img src="{{ url_for('static', filename='img/buzo5.png') }}" alt="Jeans">
+              <h6>JEANS REGULAR YOUNG</h6>
+              <P class="price">$119.000</p>
+              <button class="add-to-cart">Agregar al carrito</button>
+            </div>
+          <div class="product-card">
+            <img src="{{ url_for('static', filename='img/camiseta1.png') }}" alt="Jeans">
+            <h6>JEANS REGULAR YOUNG</h6>
+            <P class="price">$119.000</p>
+            <button class="add-to-cart">Agregar al carrito</button>
+          </div>
+          <div class="product-card">
+            <img src="{{ url_for('static', filename='img/camiseta2.png') }}" alt="Jeans">
+            <h6>JEANS REGULAR YOUNG</h6>
+            <P class="price">$119.000</p>
+            <button class="add-to-cart">Agregar al carrito</button>
+          </div>
+          <div class="product-card">
+            <img src="{{ url_for('static', filename='img/camiseta3.png') }}" alt="Jeans">
+            <h6>JEANS REGULAR YOUNG</h6>
+            <P class="price">$119.000</p>
+            <button class="add-to-cart">Agregar al carrito</button>
+          </div>
+          <div class="product-card">
+            <img src="{{ url_for('static', filename='img/camiseta4.png') }}" alt="Jeans">
+            <h6>JEANS REGULAR YOUNG</h6>
+            <P class="price">$119.000</p>
+            <button class="add-to-cart">Agregar al carrito</button>
+          </div>
+          <div class="product-card">
+            <img src="{{ url_for('static', filename='img/camiseta5.png') }}" alt="Jeans">
+            <h6>JEANS REGULAR YOUNG</h6>
+            <P class="price">$119.000</p>
+            <button class="add-to-cart">Agregar al carrito</button>
+            </div>
+        </div>
+      </section>
     
   
   
